--- a/view/adminhtml/layout/slides_slide_new.xml
+++ b/view/adminhtml/layout/slides_slide_new.xml
@@ -1,10 +1,13 @@
 <?xml version="1.0"?>
-<page xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:noNamespaceSchemaLocation="urn:magento:framework:View/Layout/etc/page_configuration.xsd">
+<page xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance"
+      xsi:noNamespaceSchemaLocation="urn:magento:framework:View/Layout/etc/page_configuration.xsd">
     <head>
         <title>Create Slider</title>
     </head>
 
-    <referenceBlock name="content">
-        <uiComponent name="moon_slider_slides_new" />
-    </referenceBlock>
+    <body>
+        <referenceBlock name="content">
+            <uiComponent name="moon_slider_slides_new"/>
+        </referenceBlock>
+    </body>
 </page>
